--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -2,7 +2,7 @@ name: Export issues
 on:
   schedule:
     # run every 8 hours
-    - cron:  '0 0,8,16 * * *'
+    # - cron:  '0 0,8,16 * * *'
 jobs:
   deploy:
     name: Export issues to S3
