--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -1,8 +1,8 @@
 name: Export issues
 on:
   schedule:
-    # run every 8 hours
-    # - cron:  '0 0,8,16 * * *'
+    # run every 5 minutes
+    - cron:  '0,5,10,15,20,25,30,35,40,45,50,55 * * * *'
 jobs:
   deploy:
     name: Export issues to S3
